[gd_scene load_steps=8 format=3 uid="uid://cl2g1spse5o22"]

[ext_resource type="Script" uid="uid://cn1yjt1bgksy0" path="res://Enemies/chainsaw_unit.gd" id="1_ljqmw"]
[ext_resource type="Texture2D" uid="uid://3d51ytyoqp7b" path="res://Enemies/Untitled-fefe.png" id="1_osc2e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ljqmw"]
radius = 28.0179

[sub_resource type="CircleShape2D" id="CircleShape2D_h17bi"]
radius = 86.0

[sub_resource type="Animation" id="Animation_h17bi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ljqmw"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hwali"]
_data = {
&"RESET": SubResource("Animation_h17bi"),
&"Walk": SubResource("Animation_ljqmw")
}

[node name="ChainsawUnit" type="Node2D"]
script = ExtResource("1_ljqmw")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(12, 7)
shape = SubResource("CircleShape2D_ljqmw")

[node name="Chase_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chase_Area"]
position = Vector2(18, 10)
shape = SubResource("CircleShape2D_h17bi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_osc2e")
hframes = 8
vframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hwali")
}

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="Chase_Area" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="Chase_Area" to="." method="_on_chase_area_body_exited"]
